[package]
name = "rust-atlas-rest"
version = "0.1.0"
edition = "2021"

[workspace]
#members=[
#    "srv",
#]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0"}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
base64 = "0.20.0-alpha.1"
mongodb = "2.3.1"
rand = "0.8.5"